# shallow_cross_encoders

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.context7/: pre-commit-vs-github-actions-ci.md
benchmarks/: full_sweep.yaml  measure_roi.py  run.py  run_sweep.py  runner.py
docs/: 20260404-synthetic-benchmark-analysis.md  20260408-data-generation-architecture.md  20260413-flashrank-comparison.md  20260415-benchmark-analysis.md  20260416-1bit-mamba-query-rewriting.md  about.md  api-reference.md  benchmark_analysis.md  concise_inking.md  distilled_pairwise_ranker.md  ensemble-distillation-guide.md  index.md  long_term_objectives.md  pipeline_reranker.md  strategies_overview.md  technical-roadmap.md
notebooks/: 00_data_exploration.ipynb  01_interactive_reranking.py  02_consistency_engine_demo.py  03_feature_analysis_dashboard.py  04_methods_atlas.py
scripts/: benchmark_all.py  benchmark_beir.py  benchmark_beir_colbert.py  benchmark_flashrank.py  benchmark_real_data.py  benchmark_trec.py  distill_ensemble_to_hybrid.py  download_beir.py  generate_contradictions.py  generate_expanded_data.py  generate_notebook_pages.py  generate_pairs.py  generate_preferences.py  materialize_demo_data.py  measure_roi.py  run_beir_benchmark.py  train_binary_reranker.py  train_distilled.py  train_hybrid.py  train_late_interaction.py  verify_enhanced_strategies.py
tests/: conftest.py  test_binary_reranker.py  test_config.py  test_consistency.py  test_core.py  test_custom_beir.py  test_distilled.py  test_embedder_edge_cases.py  test_ensemble_cache.py  test_eval.py  test_eval_runner_integration.py  test_expanded.py  test_flashrank_ensemble.py  test_hybrid.py  test_late_interaction.py  test_lexical_edge_cases.py  test_metrics.py  test_optional_backends.py  test_pipeline.py  (+5 more)
(+168 files in other folders)
