[project]
name = "shallow-cross-encoders"
version = "0.1.0"
description = "CPU-native reranking and consistency pipeline using static embeddings, lexical signals, and shallow models."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cloudpickle>=3.1.0",
  "httpx>=0.27.0",
  "numpy>=1.26.0",
  "pydantic>=2.8.0",
  "scikit-learn>=1.5.0",
  "scipy>=1.13.0",
]

[project.optional-dependencies]
runtime = [
  "model2vec>=0.3.0",
  "rank-bm25>=0.2.2",
  "xgboost>=2.1.0",
]
flashrank = [
  "flashrank>=0.2.0",
]
beir = [
  "beir>=1.0.1",
]
dev = [
  "pytest>=8.2.0",
  "pytest-benchmark>=4.0.0",
  "pytest-cov>=6.0",
  "pytest-mock>=3.14",
  "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "unit: Fast, isolated unit tests (default)",
  "e2e: Slow end-to-end integration tests",
  "llm: Tests making real LLM API calls (requires OPENROUTER_API_KEY)",
  "llm_mock: Tests mocking LLM API calls",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.coverage.run]
source = ["src"]
omit = [
  "*/__init__.py",
  "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
fail_under = 85

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
files = ["src/reranker/data"]
check_untyped_defs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "ruff>=0.15.7",
]

